# random-number-generators

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  reuse_check.yml
.reuse/: dep5
src/: CMakeLists.txt  random.c  xoroshiro.h  xxtea.c  xxtea.h
src/include/ROOT-Sim/: random.h
test/: CMakeLists.txt  init.c  numerical.c  random.h  xxtea.c
